@@ -79,6 +79,8 @@
 
 	Updated autotools scripts.  Thanks to phanium (a.k.a. phanen).
 
+	Perform sorting of completion items after doing Unicode normalization.
+
 	Fixed line number column not including padding to the left of it.
 
 	Fixed local options not being loaded on Ctrl-W x.
